<resources>
    <string name="app_name">Curso PHP MySQL</string>
    <string name="title_ruby">PHP MySQL</string>
    <string name="form_btn_mas_tarde">Mas Tarde</string>
    <string name="form_btn_ingresar">Ingresar</string>
    <string name="form_btn_crear_cuenta">Crear Cuenta</string>
    <string-array name="item_menu_principal">
        
        <item>PHP</item>
        <item>MySQL</item>
        <item>PHP y su Relación con MySQL</item>

    </string-array>
    <string-array name="item_menu_secundario_dificultad">
        
        <item>Capitulo 1.0</item>
        <item>Capitulo 1.2</item>
        <item>Capitulo 1.3</item>
    </string-array>
    <string-array name="item_menu_secundario_facil_php">
        
        <item>¿Que es PHP?</item>
        <item>Comentarios en PHP</item>
        <item>Variables y Constantes</item>


    </string-array>
    <string-array name="item_menu_secundario_medio_php">
        
        <item>Operadores de comparación</item>
        <item>Operadores lógicos</item>
        <item>Operadores de union de cadenas</item>


    </string-array>
    <string-array name="item_menu_secundario_dificil_php">
        
        <item>Funciones</item>
        <item>Ficheros</item>
        <item>Directorios</item>


    </string-array>
    <string-array name="item_menu_secundario_facil_mysql">
        
        <item>¿Que es MySQL?</item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="item_menu_secundario_medio_mysql">
        
        <item>Crear una Base de Datos</item>
        <item>Crear una tabla</item>
        <item>Insertar datos</item>
    </string-array>
    <string-array name="item_menu_secundario_dificil_mysql">
        
        <item>Borrar datos de una tabla</item>
        <item>Borrar una tabla</item>
        <item>Borrar una base de datos</item>
    </string-array>
    <string-array name="item_menu_secundario_facil_php_mysql">
        
        <item>La convinacion de PHP y MySQL</item>
        <item></item>
        <item>Sintaxis Basica</item>
    </string-array>
    <string-array name="item_menu_secundario_medio_php_mysql">
        
        <item>Conexion a la Base de datos</item>
        <item>Uso de una base de datos MySQL desde PHP</item>
        <item>SQL select</item>

    </string-array>
    <string-array name="item_menu_secundario_dificil_php_mysql">
        
        <item>SQL select</item>
        <item>SQL insert</item>
        <item>SQL delete</item>


    </string-array>
    <string-array name="item_menu_secundario_modulo4">
        <item>Examen Final</item>
    </string-array>
    <string name="login_valido">Mari</string>
    <string name="clave_valida">12</string>
    <string name="error_autenticar">Error en los datos</string>
    <string name="title_create_login_registro">Registro</string>
    <string name="datos_guardados_correctamente">"Los datos se guardaron correctamente"</string>
    <string name="btn_create_guardar">Guardar</string>
    <string name="btn_create_cancelar">Cancelar</string>
    <string name="title_login">Login</string>
    <string name="nuevo_registro">Nuevo Registro</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="mas_tarde">Aceptar</string>
    <string name="aceptar">Mas tarde</string>
    <string name="phpmsql">Curso PHP y MySQL</string>
    <string name="contraseña">Contraseña</string>
    <string name="desarrollador">Desarrollador</string>
    <string name="universidad">Universidad</string>
    <string name="asignatura">Asignatura</string>
    <string name="video">video</string>
    <string name="welcome">Bienvenido</string>
    <string name="emptyString">empyty</string>
    <string name="musica">Musica de Fondo</string>
    <string name="videoo">Video</string>
    <string name="salir">Salir</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="progreso_curso">Progreso del curso</string>
    <string name="universidad2">Universidad</string>
    <string name="asigatura">Asignatura</string>
    <string name="desarrollo">Desarrollador</string>
    <string name="configuracion">Configuración</string>
    <string name="salir1">Salir</string>
    <string name="sugerencisa">Sugerencias</string>
    <string name="grafica">grafica</string>
    <string name="menu_bar_grafica_on">Grafica</string>
    <string name="teme">Temas</string>
    <string-array name="temas_dificltad_facil_mySQl">
        <item>Creando una base de Datos</item>
        <item>Creando una Tabla</item>
        <item>Tipo de Datos</item>
        <item>Eliminar una Tabla</item>
        <item>Variables</item>
        <item>constantes</item>

    </string-array>
    <string-array name="temas_dificltad_medio_mySQl">
        <item>Creando una base de Datos</item>
        <item>Creando una Tabla</item>
        <item>Tipo de Datos</item>
        <item>Eliminar una Tabla</item>
        <item>Variables</item>
        <item>constantes</item>

    </string-array>
    <string-array name="temas_dificltad_dificil_mySQl">
        <item>Creando una base de Datos</item>
        <item>Creando una Tabla</item>
        <item>Tipo de Datos</item>
        <item>Eliminar una Tabla</item>
        <item>Variables</item>
        <item>constantes</item>
    </string-array>
    <string-array name="temas_dificltad_facil_php">
        <item>Introduccion</item>
        <item>Variables</item>
        <item>Constantes</item>
        <item>Borrar un Registro en PHP</item>


    </string-array>
    <string-array name="temas_dificltad_medio_php">
        <item>Operadores</item>
        <item>Creando una Tabla</item>
        <item>Tablas y Arrays</item>
        <item>Cadenas</item>


    </string-array>
    <string-array name="temas_dificltad_dificil_php">
        <item>Funciones </item>
        <item>Control de Flujo</item>
        <item>Base de Datos en PHP</item>
        <item>Eliminar una Tabla</item>
        <item>Programacion Orientada a objetos en PHP</item>


    </string-array>
    <string-array name="temas_dificltad_facil_mySQl_php">
        <item>Introduccion</item>
        <item>Creando una Tabla</item>
        <item>Insertar datos en una tabla</item>


    </string-array>
    <string-array name="temas_dificltad_medio_mySQl_php">
        <item>Creando una base de Datos</item>
        <item>Conectar a una Base da Datos</item>
        <item>Tipo de Datos</item>
        <item>Eliminar una Tabla</item>
        <item>Variables</item>
        <item>constantes</item>

    </string-array>
    <string-array name="temas_dificltad_dificil_mySQl_php">
        <item>Introduccion</item>
        <item>Conectar a una Base de Datos</item>

    </string-array>
    <string name="title_activity_tema">TemaActivity</string>
    <string name="capitulo_queesphp">¿Qué es PHP?</string>
    <string name="informacion_queesphp">
        "Es un lenguaje de código abierto muy popular especialmente adecuado para el desarrollo web y que puede ser incrustado en HTML."
        "\nEjemplo:"
        "\n\n&lt;!DOCTYPE HTML&gt;"
            "\n\t&lt;html&gt;"
                "\n\t\t&lt;head&gt;"
                    "\n\t\t\t&lt;title&gt;Ejemplo&lt;/title&gt;"
                "\n\t\t&lt;/head&gt;"
            "\n\t&lt;body&gt;"
                "\n\t\t&lt;?php"
                    "\n\t\t\techo \"¡Hola, soy un script de PHP!\";"
                "\n\t\t?&gt;"
            "\n\t&lt;/body&gt;"
            "\n\t&lt;/html&gt;"
        "\n\nEn lugar de usar muchos comandos para mostrar HTML (como en C o en Perl), las páginas de PHP contienen HTML con código incrustado que hace \"algo\" (en este caso, mostrar \"¡Hola, soy un script de PHP!\"). El código de PHP está encerrado entre las etiquetas especiales de comienzo y final &lt;?php y ?&gt; que permiten entrar y salir del \"modo PHP\"."
        "\n\nLo que distingue a PHP de algo del lado del cliente como Javascript es que el
        código es ejecutado en el servidor, generando HTML y enviándolo al cliente. El cliente recibirá el resultado de ejecutar el script, aunque no se sabrá el código subyacente que era. El servidor web puede ser configurado incluso para que procese todos los ficheros HTML con PHP, por lo que no hay manera de que los usuarios puedan saber qué se tiene debajo de la manga."
    </string>
    <string name="capitulo_quehacephp">¿Qué puede hacer PHP?</string>
    <string name="informacion_quehacephp"> Cualquier cosa. PHP está enfocado principalmente a la programación de scripts del lado del servidor, por lo que se puede hacer cualquier cosa que pueda hacer otro programa CGI, como recopilar datos de formularios, generar páginas con contenidos dinámicos, o enviar y recibir cookies. Aunque PHP puede hacer mucho más.
        \n\nExisten principalmente tres campos principales donde se usan scripts de PHP.

    \n\nO Scripts del lado del servidor. Este es el campo más tradicional y el foco principal. Son necesarias tres cosas para que esto funcione. El analizador de PHP (módulo CGI o servidor), un servidor web y un navegador web. Es necesario ejecutar el servidor con una instalación de PHP conectada. Se puede acceder al resultado del programa de PHP con un navegador, viendo la página de PHP a través del servidor. Todo esto se puede ejecutar en su máquina si está experimentado con la programación de PHP.
    \nO Scripts desde la línea de comandos. Se puede crear un script de PHP y ejecutarlo sin necesidad de un servidor o navegador. Solamente es necesario el analizador de PHP para utilizarlo de esta manera. Este tipo de uso es ideal para scripts que se ejecuten con regularidad empleando cron (en *nix o Linux) o el Planificador de tareas (en Windows). Estos scripts también pueden usarse para tareas simples de procesamiento de texto.
    \nO Escribir aplicaciones de escritorio. Probablemente PHP no sea el lenguaje más apropiado para crear aplicaciones de escritorio con una interfaz gráfica de usuario, pero si se conoce bien PHP, y se quisiera utilizar algunas características avanzadas de PHP en aplicaciones del lado del cliente, se puede utilizar PHP-GTK para escribir dichos programas. También es posible de esta manera escribir aplicaciones independientes de una plataforma. PHP-GTK es una extensión de PHP, no disponible en la distribución principal.
</string>
    <string name="capitulo_dondeseemplea">¿Donde puede emplearse?</string>
    <string name="informacion_dondeseemplea"> PHP puede emplearse en todos los sistemas operativos principales, incluyendo Linux, muchas variantes de Unix (incluyendo HP-UX, Solaris y OpenBSD), Microsoft Windows, Mac OS X, RISC OS y probablemente otros más. PHP admite la mayoría de servidores web de hoy en día, incluyendo Apache, IIS, y muchos otros. Esto incluye cualquier servidor web que pueda utilizar el binario de PHP FastCGI, como lighttpd y nginx. PHP funciona tanto como módulo como procesador de CGI.
        \n\nDe modo que con PHP, se tiene la libertad de elegir el sistema operativo y el servidor web. Además, se tiene la posibilidad de utilizar programación por procedimientos o programación orientada a objetos (POO), o una mezcla de ambas. </string>
    <string name="capitulo_queesmysql">¿Que es MySQL?</string>
</resources>