<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mi_etiqueta_mari_d_app="http://schemas.android.com/apk/res-auto"
    tools:context=".SeleccionModuloActivity"
    >

    <item android:title="@string/configuracion" android:id="@+id/itm_menu_bar_configuracion" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="@string/desarrollo" android:id="@+id/itm_menu_bar_desarrollador" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="@string/universidad2" android:id="@+id/itm_menu_bar_universidad" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="@string/videoo" android:id="@+id/itm_menu_bar_video" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="@string/musica" android:id="@+id/itm_menu_bar_musica" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Correo" android:id="@+id/itm_menu_bar_correo" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Memoramas" android:id="@+id/itm_menu_bar_juegos" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Galeria" android:id="@+id/itm_menu_bar_galery" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Utilerias" android:id="@+id/itm_menu_bar_tools" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Streaming" android:id="@+id/itm_menu_bar_streaming" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Camara" android:id="@+id/itm_menu_bar_camara" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Juego del gato" android:id="@+id/itm_menu_bar_piedra_pap_tig" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Promocion a la UTNG" android:id="@+id/itm_menu_bar_promocion_utng" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Progreso" android:id="@+id/itm_menu_bar_progreso" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Ahorcado (Estrategia)" android:id="@+id/itm_menu_bar_ahorcado" mi_etiqueta_mari_d_app:showAsAction="never"></item>

    <item android:title="Información" android:id="@+id/itm_menu_bar_pagina_informacion" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="Google Map" android:id="@+id/itm_menu_bar_pagina_mapa" mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="WEB" android:id="@+id/itm_menu_bar_pagina_web" mi_etiqueta_mari_d_app:showAsAction="never"></item>

    <item
        android:title="@string/grafica"
        android:id="@+id/itm_menu_bar_grafica"
        mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item
        android:title="@string/teme"
        android:id="@+id/itm_menu_bar_Tema"
        mi_etiqueta_mari_d_app:showAsAction="never"></item>
    <item android:title="@string/salir" android:id="@+id/itm_menu_bar_progreso_salir" mi_etiqueta_mari_d_app:showAsAction="never"></item>
</menu>