<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10pt"
    android:paddingRight="10pt"
    android:paddingTop="10pt"
    android:paddingBottom="10pt"
    android:layout_margin="5pt"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceder"
        android:textColor="@color/colorBlack"
        android:textSize="18pt"
        android:gravity="center"
        android:id="@+id/title_login"
        />
    <TextView
        android:id="@+id/txv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textColor="@color/colorBlack"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:text="Usuario"
        android:layout_below="@id/title_login"
        />
    <EditText
        android:id="@+id/edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_user"
        />
    <TextView
        android:id="@+id/txv_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textColor="@color/colorBlack"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/contraseña"
        android:layout_below="@id/edt_user"
        />
    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_pass"
        />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/mas_tarde"
        android:layout_below="@+id/edt_pass"
        android:layout_centerInParent="true"
        />


    <Button
        android:id="@+id/btn_mas_tarde"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_below="@+id/btn_login"
        android:layout_centerInParent="true"
         />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:id="@+id/btn_signup"
        android:layout_below="@+id/btn_mas_tarde"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:layout_alignEnd="@+id/btn_login" />


</RelativeLayout></ScrollView>